substrate/frame/support/test/tests/benchmark_ui/bad_return_type_option.stderr
error: expected `Result`
  --> tests/benchmark_ui/bad_return_type_option.rs:27:16
   |
27 |     fn bench() -> Option<BenchmarkError> {
   |                   ^^^^^^
